# ckanext-opencity

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/opencity/: cli.py  helpers.py  plugin.py  views.py
ckanext/opencity/assets/: script.js  webassets.yml
ckanext/opencity/logic/: action.py  auth.py  schema.py  validators.py
ckanext/opencity/public/css/: opencity.css
ckanext/opencity/templates/: base.html  footer.html  header.html
ckanext/opencity/templates/group/: index.html
ckanext/opencity/templates/group/snippets/: helper.html
ckanext/opencity/templates/home/snippets/: promoted.html
ckanext/opencity/templates/opencity/snippets/: head.html
ckanext/opencity/templates/organization/snippets/: helper.html
ckanext/opencity/templates/snippets/: search_result_text.html
ckanext/opencity/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext/opencity/tests/logic/: test_action.py  test_auth.py  test_validators.py
